test/expected/file-explain_x.out
cdecl> explain x
               ^
data/explain_x.cdecl:1,9: error: "x": unknown name
